[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/game/components/Process.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/components/ProcessList.gd" type="Script" id=2]

[node name="ProcessList" type="Node2D"]
script = ExtResource( 2 )

[node name="Process1" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 30 )

[node name="Process2" parent="." instance=ExtResource( 1 )]
position = Vector2( 104, 30 )

[node name="Process3" parent="." instance=ExtResource( 1 )]
position = Vector2( 179, 30 )

[node name="Process4" parent="." instance=ExtResource( 1 )]
position = Vector2( 252, 30 )

[node name="Process5" parent="." instance=ExtResource( 1 )]
position = Vector2( 326, 30 )

[connection signal="Connect" from="Process1" to="." method="_on_Process1_Connect"]
[connection signal="Connect" from="Process2" to="." method="_on_Process2_Connect"]
[connection signal="Connect" from="Process3" to="." method="_on_Process3_Connect"]
[connection signal="Connect" from="Process4" to="." method="_on_Process4_Connect"]
[connection signal="Connect" from="Process5" to="." method="_on_Process5_Connect"]
